--- a/python/factor_graph/GTSAM.ipynb
+++ b/python/factor_graph/GTSAM.ipynb
@@ -120,33 +120,6 @@
     "                         NonlinearFactorGraph, PinholeCameraCal3_S2, Point3,\n",
     "                         Pose3, PriorFactorPoint3, PriorFactorPose3, Rot3, Values)\n",
     "\n",
-    "\"\"\"\n",
-    "Camera observations of landmarks (i.e. pixel coordinates) will be stored as Point2 (x, y).\n",
-    "\n",
-    "Each variable in the system (poses and landmarks) must be identified with a unique key.\n",
-    "We can either use simple integer keys (1, 2, 3, ...) or symbols (X1, X2, L1).\n",
-    "Here we will use Symbols\n",
-    "\n",
-    "In GTSAM, measurement functions are represented as 'factors'. Several common factors\n",
-    "have been provided with the library for solving robotics/SLAM/Bundle Adjustment problems.\n",
-    "Here we will use Projection factors to model the camera's landmark observations.\n",
-    "Also, we will initialize the robot at some location using a Prior factor.\n",
-    "\n",
-    "When the factors are created, we will add them to a Factor Graph. As the factors we are using\n",
-    "are nonlinear factors, we will need a Nonlinear Factor Graph.\n",
-    "\n",
-    "Finally, once all of the factors have been added to our factor graph, we will want to\n",
-    "solve/optimize to graph to find the best (Maximum A Posteriori) set of variable values.\n",
-    "GTSAM includes several nonlinear optimizers to perform this step. Here we will use a\n",
-    "trust-region method known as Powell's Degleg\n",
-    "\n",
-    "The nonlinear solvers within GTSAM are iterative solvers, meaning they linearize the\n",
-    "nonlinear functions around an initial linearization point, then solve the linear system\n",
-    "to update the linearization point. This happens repeatedly until the solver converges\n",
-    "to a consistent set of variable values. This requires us to specify an initial guess\n",
-    "for each variable, held in a Values container.\n",
-    "\"\"\"\n",
-    "\n",
     "# Define the camera calibration parameters\n",
     "K = Cal3_S2(50.0, 50.0, 0.0, 50.0, 50.0)\n",
     "\n",
@@ -237,6 +210,13 @@
     "        print(f\"angles: azimuth={azimuth:.0f}deg, elevation={elevation:.0f}deg\")\n",
     "    return azimuth, elevation\n",
     "\n",
+    "def get_vector(azimuth, elevation):\n",
+    "    return np.r_[\n",
+    "        np.cos(azimuth) * np.cos(elevation), \n",
+    "        np.sin(azimuth) * np.cos(elevation),\n",
+    "        np.sin(elevation)\n",
+    "    ]\n",
+    "\n",
     "def print_plane(label, plane):\n",
     "    print(f\"{label} distance: {plane.distance():.2f}\", end=\"\\t\")\n",
     "    normal = plane.normal().point3()\n",
@@ -256,7 +236,7 @@
     "    \"\"\" coordinates of plane_w in local coordinates r, given wTr. \"\"\"\n",
     "    n_ = plane_w.normal()\n",
     "    d_ = plane_w.distance()\n",
-    "    r_n = wTr.rotation().inverse().rotate(n_.point3()) # normal in local frame\n",
+    "    r_n = wTr.rotation().inverse().rotate(n_.point3()) \n",
     "    r_d = d_ - wTr.translation().dot(n_.point3())\n",
     "    return Plane(n=Unit3(r_n), d=r_d)\n",
     "\n",
@@ -280,7 +260,7 @@
     "P = symbol_shorthand.P\n",
     "\n",
     "estimate = Values()\n",
-    "plane = Plane(n=Unit3([0.0, 1.0, 0]), d=0.5) # in world coordinates\n",
+    "plane = Plane(n=Unit3([0.0, 1.0, 0]), d=1.0) # in world coordinates\n",
     "estimate.insert(P(0), plane)\n",
     "\n",
     "# first pose at origin\n",
@@ -292,20 +272,20 @@
     "pose_delta = Pose3(r=Rot3.Ypr(np.pi/6, 0, 0), t=Point3(0.0, 0.2, 0.0))#, t=Point3(0.0, 0.1, 0.0))\n",
     "pose1 = pose0 * pose_delta\n",
     "estimate.insert(X(1), pose1)\n",
-    "plane2 = transformTo(pose1, plane)\n",
+    "plane2 = plane.transformTo(pose1) #, plane)\n",
     "print_plane(\"second\", plane2)\n",
     "\n",
     "pose_delta = Pose3(r=Rot3.Ypr(-np.pi/6, 0, 0), t=Point3(0.0, 0.0, 0.0))#, t=Point3(0.0, 0.1, 0.0))\n",
     "pose2 = pose1 * pose_delta\n",
     "estimate.insert(X(2), pose2)\n",
-    "plane3 = transformTo(pose2, plane)\n",
+    "plane3 = plane.transformTo(pose2) #, plane)\n",
     "print_plane(\"third\", plane3)\n",
     "\n",
     "pose_delta = Pose3(r=Rot3.Ypr(-np.pi/6, 0, 0), t=Point3(0.0, -0.2, 0.0))#, t=Point3(0.0, 0.1, 0.0))\n",
     "pose3 = pose2 * pose_delta\n",
     "estimate.insert(X(3), pose3)\n",
-    "plane4 = transformTo(pose3, plane)\n",
-    "print_plane(\"third\", plane4)\n",
+    "plane4 = plane.transformTo(pose3) #, plane)\n",
+    "print_plane(\"fourth\", plane4)\n",
     "\n",
     "fig = plt.figure(0)\n",
     "fig.set_size_inches(10, 10)\n",
@@ -325,8 +305,9 @@
     "P = symbol_shorthand.P\n",
     "\n",
     "# velocity \n",
-    "v = np.array([0, 0.1, 0]); sigma_v = 0.01 # m/s\n",
-    "w = np.array([0, 0, 0]); sigma_w = 5 * np.pi / 180 # rad/s (roll, pitch, yaw)\n",
+    "v = np.array([0, 0.1, 0]); sigma_v = 0.001 # m/s, linear velocity\n",
+    "w = np.array([0, 0, 0]); sigma_w = 0.05 * np.pi / 180 # rad/s (yaw, pitch, roll)\n",
+    "delta_t = 1; # s, sampling frequency\n",
     "\n",
     "poses = []\n",
     "poses_noiseless = []\n",
@@ -343,16 +324,14 @@
     "w_delta = w * delta_t\n",
     "pose_delta_noiseless = Pose3(r=Rot3.Ypr(*w_delta), t=Point3(v * delta_t))\n",
     "\n",
-    "poses.append(pose_t)\n",
-    "poses_noiseless.append(pose_t_noiseless)\n",
-    "\n",
-    "delta_t = 1\n",
+    "#poses.append(pose_t)\n",
+    "#poses_noiseless.append(pose_t_noiseless)\n",
     "\n",
     "estimate = Values()\n",
-    "estimate.insert(P(1), plane)\n",
+    "estimate.insert(P(0), plane)\n",
     "estimate.insert(X(0), pose_t)\n",
     "\n",
-    "for t in range(5):\n",
+    "for t in range(2):\n",
     "    v_noisy = delta_t * (v + np.random.normal(size=len(v), scale=sigma_v))\n",
     "    w_noisy = delta_t * (w + np.random.normal(size=len(w), scale=sigma_w))\n",
     "    \n",
@@ -365,8 +344,8 @@
     "    \n",
     "    estimate.insert(X(t + 1), pose_t)\n",
     "    \n",
-    "    plane_local = transformTo(pose_t, plane)\n",
-    "    print_plane(t, plane_local)\n",
+    "    plane_local = plane.transformTo(pose_t)\n",
+    "    print_plane(f\" pose {t}\", plane_local)\n",
     "    \n",
     "    azimuth, elevation = get_angles(plane_local.normal().point3())\n",
     "    distance = plane_local.distance()\n",
@@ -397,39 +376,65 @@
    "outputs": [],
    "source": [
     "from gtsam import PriorFactorOrientedPlane3 # is created automatically!\n",
+    "from gtsam import OrientedPlane3Factor as PlaneFactor\n",
     "\n",
     "# Create and solve factor graph for above example\n",
     "initial_estimate = Values()\n",
     "initial_estimate.insert(P(0), plane)\n",
     "for i, pose in enumerate(poses_noiseless):\n",
     "    initial_estimate.insert(X(i), pose)\n",
-    "    \n",
-    "pose_noise = gtsam.noiseModel.Isotropic.Sigma(6, 0.01)\n",
     "\n",
     "graph = NonlinearFactorGraph()\n",
     "\n",
-    "factor = PriorFactorPose3(X(0), poses[0], pose_noise)\n",
-    "graph.push_back(factor)\n",
-    "\n",
-    "plane_noise = gtsam.noiseModel.Diagonal.Sigmas([0.785398163, 0.785398163, 5])\n",
+    "plane_noise = gtsam.noiseModel.Diagonal.Sigmas([0.8, 0.8, 5])\n",
     "factor = PriorFactorOrientedPlane3(P(0), plane, plane_noise)\n",
     "graph.push_back(factor)\n",
     "\n",
+    "pose_noise = gtsam.noiseModel.Isotropic.Sigma(6, 0.01)\n",
     "for i, meas in enumerate(measurements.values()):\n",
-    "    distance = meas['distance']\n",
+    "    distance = meas['distance'] \n",
     "    azimuth = meas['azimuth'] / 180 * np.pi\n",
     "    elevation = meas['elevation'] / 180 * np.pi\n",
     "    \n",
-    "    # TODO(continue here): convert below to actual plane factors\n",
-    "    #x1_p3_noise = gtsam.noiseModel.Isotropic.Sigma(3, 0.0451801);\n",
-    "    #factor = PlaneFactor(p2_meas.planeCoefficients(), x1_p2_noise, X(1), P(2))\n",
-    "    #graph.push_back(factor)\n",
-    "\n",
-    "params = gtsam.DoglegParams()\n",
-    "params.setVerbosity('')\n",
-    "optimizer = DoglegOptimizer(graph, initial_estimate, params)\n",
-    "print('Optimizing:')\n",
+    "    # plane measurements\n",
+    "    normal_vec = get_vector(azimuth, elevation) \n",
+    "    plane_meas = Plane(n=Unit3(normal_vec), d=distance)\n",
+    "    print(\"test\", plane_meas)\n",
+    "    \n",
+    "    plane_meas2 = plane.transformTo(poses[i])#, plane)\n",
+    "    #plane_meas = transformFrom(poses[i], plane_meas)\n",
+    "    print(\"test2\", plane_meas)\n",
+    "    plane_noise = gtsam.noiseModel.Isotropic.Sigma(3, 0.8);\n",
+    "    factor = PlaneFactor(plane_meas.planeCoefficients(), plane_noise, X(i), P(0))\n",
+    "    graph.push_back(factor)\n",
+    "    \n",
+    "    # imu measurements\n",
+    "    print(f\"from pose {i} {poses[i].translation()}: distance {plane_meas.distance()}\")\n",
+    "    factor = PriorFactorPose3(X(i), poses[i], pose_noise)\n",
+    "    graph.push_back(factor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "from gtsam import GaussNewtonOptimizer, NonlinearOptimizerParams\n",
+    "#params = gtsam.DoglegParams()\n",
+    "#params = gtsam.GaussNewtonOptimizerParams()\n",
+    "#params.setVerbosity(\"VALUES\")\n",
+    "#print('====================')\n",
+    "#print('Initial estimtae:')\n",
+    "#print(initial_estimate)\n",
+    "#print(params)\n",
+    "#optimizer = DoglegOptimizer(graph, initial_estimate, params)\n",
+    "optimizer = GaussNewtonOptimizer(graph, initial_estimate)\n",
     "result = optimizer.optimize()\n",
+    "print('Result:')\n",
+    "print('====================')\n",
     "print('initial error = {}'.format(graph.error(initial_estimate)))\n",
     "print('final error = {}'.format(graph.error(result)))"
    ]
@@ -440,80 +445,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from gtsam import symbol_shorthand\n",
-    "from gtsam import DoglegOptimizer\n",
-    "from gtsam import OrientedPlane3 as Plane\n",
-    "from gtsam import OrientedPlane3Factor as PlaneFactor\n",
-    "from gtsam import NonlinearFactorGraph\n",
-    "from gtsam import Values\n",
-    "from gtsam import Pose3, Rot3, Point3\n",
-    "\n",
-    "X = symbol_shorthand.X # Pose3 (x, y, z, r, p, y)\n",
-    "P = symbol_shorthand.P # Plane \n",
-    "\n",
-    "# Create a factor graph\n",
-    "graph = NonlinearFactorGraph()\n",
-    "initial_estimate = Values()\n",
-    "\n",
-    "#Initial values\n",
-    "p3 = Plane(np.array([0.211098835, 0.214292752, 0.95368543, 26.4269514]))\n",
-    "p2 = Plane(np.array([0.301901811, 0.151751467, 0.941183717, 33.4388229]))\n",
-    "\n",
-    "rot3 = Rot3(np.array([0.799903913, -0.564527097,  0.203624376, 0.552537226,   0.82520195,  0.117236322, -0.234214312, 0.0187322547,  0.972004505]))\n",
-    "point3 = Point3(np.array([-91.7500013,-0.47569366,-4.61067606]))\n",
-    "x1 = Pose3(rot3, point3)\n",
-    "\n",
-    "#Setup priors\n",
-    "initial_estimate = Values()\n",
-    "initial_estimate.insert(X(1), x1)\n",
-    "initial_estimate.insert(P(2), p2)\n",
-    "initial_estimate.insert(P(3), p3)\n",
-    "\n",
-    "#Setup prior factors\n",
-    "x1_prior = Pose3(rot3, point3)\n",
-    "x1_noise = gtsam.noiseModel.Isotropic.Sigma(6, 0.01)  # one pixel in u and v\n",
-    "factor = PriorFactorPose3(X(1), x1_prior, x1_noise)\n",
-    "graph.push_back(factor)\n",
-    "\n",
-    "p3_prior = p3\n",
-    "p2_prior = p2\n",
-    "\n",
-    "p3_noise = gtsam.noiseModel.Diagonal.Sigmas([0.785398163, 0.785398163, 5])\n",
-    "p2_noise = gtsam.noiseModel.Diagonal.Sigmas([0.785398163, 0.785398163, 5])\n",
-    "\n",
-    "factor = PriorFactorOrientedPlane3(P(3), p3_prior, p3_noise)\n",
-    "graph.push_back(factor)\n",
-    "factor = PriorFactorOrientedPlane3(P(2), p2_prior, p2_noise)\n",
-    "graph.push_back(factor)\n",
-    "\n",
-    "# Setup plane factors\n",
-    "p3_meas = Plane(np.array([0.0638967294, 0.0755284627, 0.995094297, 2.55956073]))\n",
-    "p2_meas = Plane(np.array([0.104902077, -0.0275756528, 0.994100165, 1.32765088]))\n",
-    "x1_p2_noise = gtsam.noiseModel.Isotropic.Sigma(3, 0.0322889);\n",
-    "x1_p3_noise = gtsam.noiseModel.Isotropic.Sigma(3, 0.0451801);\n",
-    "\n",
-    "#factor = PlaneFactor(p2_meas.planeCoefficients(), x1_p2_noise, X(1), P(2))\n",
-    "#graph.push_back(factor)\n",
-    "\n",
-    "#factor = PlaneFactor(p3_meas.planeCoefficients(), x1_p3_noise, X(1), P(3))\n",
-    "#graph.push_back(factor)\n",
-    "\n",
-    "# Optimize the graph and print results\n",
-    "params = gtsam.DoglegParams()\n",
-    "params.setVerbosity('')\n",
-    "optimizer = DoglegOptimizer(graph, initial_estimate, params)\n",
-    "print('Optimizing:')\n",
-    "result = optimizer.optimize()\n",
-    "print('initial error = {}'.format(graph.error(initial_estimate)))\n",
-    "print('final error = {}'.format(graph.error(result)))\n",
-    "\n",
-    "#marginals = Marginals(graph, result)\n",
-    "#fig = plt.figure()\n",
-    "#plot.plot_3d_points(1, result, marginals=marginals, cov_scale=0.1)\n",
-    "#plot.plot_trajectory(1, result, cov_scale=0.1, marginals=marginals, axis_length=8)\n",
-    "#plot.set_axes_equal(1)\n",
-    "#fig.set_size_inches(10, 10)"
+    "marginals = Marginals(graph, result)\n",
+    "fig = plt.figure()\n",
+    "#plot.plot_3d_points(1, result, cov_scale=0.1)\n",
+    "plot.plot_trajectory(1, result, cov_scale=0.1, axis_length=0.1)\n",
+    "plot.plot_trajectory(1, initial_estimate, cov_scale=0.1, axis_length=0.1, ls=\":\")\n",
+    "plot.set_axes_equal(1)\n",
+    "fig.set_size_inches(10, 10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plane_estimate = result.atOrientedPlane3(P(0))\n",
+    "plane_estimate.print(\"overall estimate\")\n",
+    "#plane_estimate.evaluateError(X(4))\n",
+    "from gtsam.gtsam.utilities import allPose3s\n",
+    "poses_i = allPose3s(result)\n",
+    "for i in poses_i.keys():\n",
+    "    pose_i = result.atPose3(i)\n",
+    "    print(f\"translation of pose:\", pose_i.translation())\n",
+    "    print(f\"predicted plane distance : {plane_estimate.transformTo(pose_i).distance():2f}\")\n",
+    "    print(f\"predicted plane distance : {plane_estimate.transformFrom(pose_i).distance():2f}\")\n",
+    "    print(f\"predicted plane distance : {plane_estimate.transform(pose_i).distance():2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Observations\n",
+    "\n",
+    "- need to figure out in what coordinate system the Plane factor is, and why even in the noiseless case the optimization doesn't give the correct result. \n",
+    "- they key lies in above cell: we need to take into account that OrientationFactor is written in terms of \"transform\" and not \"transformTo\", therefore resutls are slightly different"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
