Fix planar factor graph examples

--- a/python/factor_graph/GTSAM.ipynb
+++ b/python/factor_graph/GTSAM.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pose2SLAM example\n",
+    "# 1. Pose2SLAM example\n",
     "\n",
     "Adopted from `python/gtsam/tests/test_Pose2SLAMExample.py`"
    ]
@@ -39,39 +39,42 @@
     "graph = gtsam.NonlinearFactorGraph()\n",
     "\n",
     "# prior\n",
-    "priorMean = gtsam.Pose2(0.0, 0.0, 0.0)  # prior at origin\n",
-    "priorNoise = gtsam.noiseModel.Diagonal.Sigmas(np.array([0.3, 0.3, 0.1]))\n",
-    "graph.add(gtsam.PriorFactorPose2(1, priorMean, priorNoise))\n",
+    "prior_mean = gtsam.Pose2(0.0, 0.0, 0.0)  # prior at origin\n",
+    "prior_noise = gtsam.noiseModel.Diagonal.Sigmas(np.array([0.3, 0.3, 0.1]))\n",
+    "graph.add(gtsam.PriorFactorPose2(1, prior_mean, prior_noise))\n",
     "\n",
     "# odometry\n",
-    "odometryNoise = gtsam.noiseModel.Diagonal.Sigmas(np.array([0.2, 0.2, 0.1]))\n",
+    "odometry_noise = gtsam.noiseModel.Diagonal.Sigmas(np.array([0.2, 0.2, 0.1]))\n",
     "graph.add(\n",
-    "    gtsam.BetweenFactorPose2(1, 2, gtsam.Pose2(2.0, 0.0, 0.0), odometryNoise))\n",
+    "    gtsam.BetweenFactorPose2(1, 2, gtsam.Pose2(2.0, 0.0, 0.0), odometry_noise))\n",
     "graph.add(\n",
     "    gtsam.BetweenFactorPose2(2, 3, gtsam.Pose2(2.0, 0.0, pi / 2),\n",
-    "                             odometryNoise))\n",
+    "                             odometry_noise))\n",
     "graph.add(\n",
     "    gtsam.BetweenFactorPose2(3, 4, gtsam.Pose2(2.0, 0.0, pi / 2),\n",
-    "                             odometryNoise))\n",
+    "                             odometry_noise))\n",
     "graph.add(\n",
     "    gtsam.BetweenFactorPose2(4, 5, gtsam.Pose2(2.0, 0.0, pi / 2),\n",
-    "                             odometryNoise))\n",
+    "                             odometry_noise))\n",
     "\n",
     "# loop closure\n",
     "model = gtsam.noiseModel.Diagonal.Sigmas(np.array([0.2, 0.2, 0.1]))\n",
     "graph.add(gtsam.BetweenFactorPose2(5, 2, gtsam.Pose2(2.0, 0.0, pi / 2), model))\n",
     "\n",
     "# initialization\n",
-    "initialEstimate = gtsam.Values()\n",
-    "initialEstimate.insert(1, gtsam.Pose2(0.5, 0.0, 0.2))\n",
-    "initialEstimate.insert(2, gtsam.Pose2(2.3, 0.1, -0.2))\n",
-    "initialEstimate.insert(3, gtsam.Pose2(4.1, 0.1, pi / 2))\n",
-    "initialEstimate.insert(4, gtsam.Pose2(4.0, 2.0, pi))\n",
-    "initialEstimate.insert(5, gtsam.Pose2(2.1, 2.1, -pi / 2))\n",
+    "initial_estimate = gtsam.Values()\n",
+    "initial_estimate.insert(1, gtsam.Pose2(0.5, 0.0, 0.2))\n",
+    "initial_estimate.insert(2, gtsam.Pose2(2.3, 0.1, -0.2))\n",
+    "initial_estimate.insert(3, gtsam.Pose2(4.1, 0.1, pi / 2))\n",
+    "initial_estimate.insert(4, gtsam.Pose2(4.0, 2.0, pi))\n",
+    "initial_estimate.insert(5, gtsam.Pose2(2.1, 2.1, -pi / 2))\n",
     "\n",
     "# Optimize using Levenberg-Marquardt optimization with an ordering from colamd\n",
-    "optimizer = gtsam.LevenbergMarquardtOptimizer(graph, initialEstimate)\n",
+    "optimizer = gtsam.LevenbergMarquardtOptimizer(graph, initial_estimate)\n",
+    "print(\"Optimizing...\")\n",
     "result = optimizer.optimizeSafely()\n",
+    "print('initial error = {}'.format(graph.error(initial_estimate)))\n",
+    "print('final error = {}'.format(graph.error(result)))\n",
     "\n",
     "# plot results\n",
     "marginals = gtsam.Marginals(graph, result)\n",
@@ -90,14 +93,14 @@
     "    )\n",
     "plt.axis('equal')\n",
     "#plt.legend(loc='upper left')\n",
-    "plt.grid()"
+    "plt.grid()\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SFM example\n",
+    "# 2. SFM example\n",
     "\n",
     "Adopted from `http://docs.ros.org/en/melodic/api/gtsam/html/SFMExample_8py_source.html`"
    ]
@@ -174,13 +177,13 @@
     "#params.setVerbosity('TERMINATION')\n",
     "params.setVerbosity('')\n",
     "optimizer = DoglegOptimizer(graph, initial_estimate, params)\n",
-    "print('Optimizing:')\n",
+    "print('Optimizing...')\n",
     "result = optimizer.optimize()\n",
     "#result.print('Final results:\\n')\n",
     "print('initial error = {}'.format(graph.error(initial_estimate)))\n",
     "print('final error = {}'.format(graph.error(result)))\n",
     "\n",
-    "print(result)\n",
+    "#print(result)\n",
     "\n",
     "marginals = Marginals(graph, result)\n",
     "fig = plt.figure()\n",
@@ -194,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Planar SLAM example"
+    "# 3. Planar SLAM example"
    ]
   },
   {
@@ -240,10 +243,37 @@
     "    r_d = d_ - wTr.translation().dot(n_.point3())\n",
     "    return Plane(n=Unit3(r_n), d=r_d)\n",
     "\n",
+    "def plot_all(estimate, axis_length=0.2):\n",
+    "    fig = plt.figure(0)\n",
+    "    fig.set_size_inches(10, 10)\n",
+    "    plot.plot_trajectory(0, estimate, axis_length=axis_length)\n",
+    "    plot.set_axes_equal(0)\n",
+    "\n",
+    "    fig = plt.figure(1)\n",
+    "    fig.set_size_inches(10, 10)\n",
+    "    plot.plot_trajectory(1, estimate, axis_length=axis_length)\n",
+    "    plot.set_axes_equal(1)\n",
+    "    plt.gca().view_init(elev=0., azim=0)\n",
+    "    plt.title(\"side view\")\n",
+    "\n",
+    "    fig = plt.figure(2)\n",
+    "    fig.set_size_inches(10, 10)\n",
+    "    plot.plot_trajectory(2, estimate, axis_length=axis_length)\n",
+    "    plot.set_axes_equal(2)\n",
+    "    plt.gca().view_init(elev=90., azim=0)\n",
+    "    plt.title(\"top view\")\n",
+    "\n",
     "# TODO: need functions to\n",
     "# - calculate bearing to a plane\n",
     "# - calculate range to a plane\n",
     "# just like Pose3.bearing(Pose3) or Pose3.range(pose3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.1 Understand the plane object"
    ]
   },
   {
@@ -252,7 +282,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# understand the plane object\n",
     "from gtsam import Unit3, Pose2\n",
     "from gtsam import OrientedPlane3 as Plane\n",
     "\n",
@@ -260,7 +289,7 @@
     "P = symbol_shorthand.P\n",
     "\n",
     "estimate = Values()\n",
-    "plane = Plane(n=Unit3([0.0, 1.0, 0]), d=1.0) # in world coordinates\n",
+    "plane = Plane(n=Unit3(-np.array([0.0, 1.0, 0])), d=1.0) # in local coordinates\n",
     "estimate.insert(P(0), plane)\n",
     "\n",
     "# first pose at origin\n",
@@ -268,35 +297,31 @@
     "estimate.insert(X(0), pose0)\n",
     "print_plane(\"initial\", plane)\n",
     "\n",
-    "# first t, then r!\n",
-    "pose_delta = Pose3(r=Rot3.Ypr(np.pi/6, 0, 0), t=Point3(0.0, 0.2, 0.0))#, t=Point3(0.0, 0.1, 0.0))\n",
-    "pose1 = pose0 * pose_delta\n",
-    "estimate.insert(X(1), pose1)\n",
-    "plane2 = plane.transformTo(pose1) #, plane)\n",
-    "print_plane(\"second\", plane2)\n",
+    "pose1 = pose0\n",
+    "for i in np.arange(8):\n",
+    "    # first t, then r!\n",
+    "    pose_delta = Pose3(r=Rot3.Ypr(np.pi/4, 0, 0), t=Point3(0.0, 0.2, 0.0))#, t=Point3(0.0, 0.1, 0.0))\n",
+    "    pose1 = pose1 * pose_delta\n",
+    "    estimate.insert(X(i+1), pose1)\n",
+    "    plane2 = plane.transform(pose1) #, plane)\n",
+    "    print_plane(\"second\", plane2)\n",
     "\n",
-    "pose_delta = Pose3(r=Rot3.Ypr(-np.pi/6, 0, 0), t=Point3(0.0, 0.0, 0.0))#, t=Point3(0.0, 0.1, 0.0))\n",
-    "pose2 = pose1 * pose_delta\n",
-    "estimate.insert(X(2), pose2)\n",
-    "plane3 = plane.transformTo(pose2) #, plane)\n",
-    "print_plane(\"third\", plane3)\n",
-    "\n",
-    "pose_delta = Pose3(r=Rot3.Ypr(-np.pi/6, 0, 0), t=Point3(0.0, -0.2, 0.0))#, t=Point3(0.0, 0.1, 0.0))\n",
-    "pose3 = pose2 * pose_delta\n",
-    "estimate.insert(X(3), pose3)\n",
-    "plane4 = plane.transformTo(pose3) #, plane)\n",
-    "print_plane(\"fourth\", plane4)\n",
-    "\n",
-    "fig = plt.figure(0)\n",
-    "fig.set_size_inches(10, 10)\n",
-    "plot.plot_trajectory(0, estimate, axis_length=0.1)\n",
-    "plot.set_axes_equal(0)"
+    "plot_all(estimate)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.2 Simulate measurements"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "np.random.seed(1)\n",
@@ -305,8 +330,8 @@
     "P = symbol_shorthand.P\n",
     "\n",
     "# velocity \n",
-    "v = np.array([0, 0.1, 0]); sigma_v = 0.001 # m/s, linear velocity\n",
-    "w = np.array([0, 0, 0]); sigma_w = 0.05 * np.pi / 180 # rad/s (yaw, pitch, roll)\n",
+    "v = np.array([0, 0.1, 0]); sigma_v = 0.01 # m/s, linear velocity\n",
+    "w = np.array([0, 0, 0]); sigma_w = 1 * np.pi / 180 # rad/s (yaw, pitch, roll)\n",
     "delta_t = 1; # s, sampling frequency\n",
     "\n",
     "poses = []\n",
@@ -314,7 +339,7 @@
     "measurements = {}\n",
     "\n",
     "# plane\n",
-    "plane = Plane(n=Unit3([0, 1.0, 0]), d=1.0) # one meter\n",
+    "plane = Plane(n=Unit3([0, -1.0, 0]), d=1.0) # one meter\n",
     "print_plane(\"initial\", plane)\n",
     "\n",
     "# initial pose\n",
@@ -330,8 +355,7 @@
     "estimate = Values()\n",
     "estimate.insert(P(0), plane)\n",
     "estimate.insert(X(0), pose_t)\n",
-    "\n",
-    "for t in range(2):\n",
+    "for t in range(4):\n",
     "    v_noisy = delta_t * (v + np.random.normal(size=len(v), scale=sigma_v))\n",
     "    w_noisy = delta_t * (w + np.random.normal(size=len(w), scale=sigma_w))\n",
     "    \n",
@@ -344,29 +368,24 @@
     "    \n",
     "    estimate.insert(X(t + 1), pose_t)\n",
     "    \n",
-    "    plane_local = plane.transformTo(pose_t)\n",
+    "    plane_local = plane.transform(pose_t)\n",
     "    print_plane(f\" pose {t}\", plane_local)\n",
     "    \n",
     "    azimuth, elevation = get_angles(plane_local.normal().point3())\n",
     "    distance = plane_local.distance()\n",
     "    \n",
     "    measurements[t] = {'distance': distance, 'azimuth':azimuth, 'elevation':elevation}\n",
-    "\n",
-    "fig = plt.figure(0)\n",
-    "fig.set_size_inches(10, 10)\n",
-    "plot.plot_trajectory(0, estimate, axis_length=0.2)\n",
-    "plot.set_axes_equal(0)\n",
-    "plt.gca().view_init(elev=0., azim=0)\n",
-    "plt.title(\"side view\")\n",
-    "plt.show()\n",
-    "\n",
-    "fig = plt.figure(1)\n",
-    "fig.set_size_inches(10, 10)\n",
-    "plot.plot_trajectory(1, estimate, axis_length=0.2)\n",
-    "plot.set_axes_equal(1)\n",
-    "plt.gca().view_init(elev=90., azim=0)\n",
-    "plt.title(\"top view\")\n",
+    "    \n",
+    "    \n",
+    "plot_all(estimate)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.3 Create factor graph"
    ]
   },
   {
@@ -387,7 +406,9 @@
     "graph = NonlinearFactorGraph()\n",
     "\n",
     "plane_noise = gtsam.noiseModel.Diagonal.Sigmas([0.8, 0.8, 5])\n",
+    "\n",
     "factor = PriorFactorOrientedPlane3(P(0), plane, plane_noise)\n",
+    "print(f\"Added plane factor from pose {0} with distance: {plane.distance():.2f}\")\n",
     "graph.push_back(factor)\n",
     "\n",
     "pose_noise = gtsam.noiseModel.Isotropic.Sigma(6, 0.01)\n",
@@ -398,20 +419,25 @@
     "    \n",
     "    # plane measurements\n",
     "    normal_vec = get_vector(azimuth, elevation) \n",
-    "    plane_meas = Plane(n=Unit3(normal_vec), d=distance)\n",
-    "    print(\"test\", plane_meas)\n",
+    "    plane_meas = Plane(n=Unit3(-normal_vec), d=distance)\n",
     "    \n",
-    "    plane_meas2 = plane.transformTo(poses[i])#, plane)\n",
-    "    #plane_meas = transformFrom(poses[i], plane_meas)\n",
-    "    print(\"test2\", plane_meas)\n",
+    "    plane_meas2 = plane.transform(poses[i])#, plane)\n",
     "    plane_noise = gtsam.noiseModel.Isotropic.Sigma(3, 0.8);\n",
     "    factor = PlaneFactor(plane_meas.planeCoefficients(), plane_noise, X(i), P(0))\n",
     "    graph.push_back(factor)\n",
+    "    print(f\"Added plane factor from pose {i} with distance: {plane_meas.distance():.2f}\")\n",
     "    \n",
     "    # imu measurements\n",
-    "    print(f\"from pose {i} {poses[i].translation()}: distance {plane_meas.distance()}\")\n",
     "    factor = PriorFactorPose3(X(i), poses[i], pose_noise)\n",
+    "    print(f\"Added prior factor to pose {i}: {poses[i].translation().round(3)}\")\n",
     "    graph.push_back(factor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.5 Solve factor graph"
    ]
   },
   {
@@ -432,70 +458,21 @@
     "#print(params)\n",
     "#optimizer = DoglegOptimizer(graph, initial_estimate, params)\n",
     "optimizer = GaussNewtonOptimizer(graph, initial_estimate)\n",
+    "print('Optimizing...')\n",
     "result = optimizer.optimize()\n",
-    "print('Result:')\n",
-    "print('====================')\n",
     "print('initial error = {}'.format(graph.error(initial_estimate)))\n",
-    "print('final error = {}'.format(graph.error(result)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "marginals = Marginals(graph, result)\n",
-    "fig = plt.figure()\n",
-    "#plot.plot_3d_points(1, result, cov_scale=0.1)\n",
-    "plot.plot_trajectory(1, result, cov_scale=0.1, axis_length=0.1)\n",
-    "plot.plot_trajectory(1, initial_estimate, cov_scale=0.1, axis_length=0.1, ls=\":\")\n",
-    "plot.set_axes_equal(1)\n",
-    "fig.set_size_inches(10, 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plane_estimate = result.atOrientedPlane3(P(0))\n",
-    "plane_estimate.print(\"overall estimate\")\n",
-    "#plane_estimate.evaluateError(X(4))\n",
-    "from gtsam.gtsam.utilities import allPose3s\n",
-    "poses_i = allPose3s(result)\n",
-    "for i in poses_i.keys():\n",
-    "    pose_i = result.atPose3(i)\n",
-    "    print(f\"translation of pose:\", pose_i.translation())\n",
-    "    print(f\"predicted plane distance : {plane_estimate.transformTo(pose_i).distance():2f}\")\n",
-    "    print(f\"predicted plane distance : {plane_estimate.transformFrom(pose_i).distance():2f}\")\n",
-    "    print(f\"predicted plane distance : {plane_estimate.transform(pose_i).distance():2f}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Observations\n",
+    "print('final error = {}'.format(graph.error(result)))\n",
     "\n",
-    "- need to figure out in what coordinate system the Plane factor is, and why even in the noiseless case the optimization doesn't give the correct result. \n",
-    "- they key lies in above cell: we need to take into account that OrientationFactor is written in terms of \"transform\" and not \"transformTo\", therefore resutls are slightly different"
+    "plot_all(result)\n",
+    "plot.plot_trajectory(0, initial_estimate, axis_length=0.2, ls=\":\")\n",
+    "plot.plot_trajectory(1, initial_estimate, axis_length=0.2, ls=\":\")\n",
+    "plot.plot_trajectory(2, initial_estimate, axis_length=0.2, ls=\":\")\n",
+    "#marginals = Marginals(graph, result)\n",
+    "#fig = plt.figure()\n",
+    "#plot.plot_trajectory(1, result, cov_scale=0.1, axis_length=0.1)\n",
+    "#plot.set_axes_equal(1)\n",
+    "#fig.set_size_inches(10, 10)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
