Create new results for presentation

--- a/python/WallAnalysis.ipynb
+++ b/python/WallAnalysis.ipynb
@@ -321,7 +321,9 @@
     "start_distances_grid = [max(df_dist)+10] #[max(df_dist) + i for i in [0, 10, 20]]\n",
     "gammas_grid = np.arange(gamma_min, 91, step=1)\n",
     "\n",
-    "factor = 2.0 #average #2\n",
+    "df_theory_pruned = get_df_theory(df_freq, df_dist)\n",
+    "\n",
+    "factor = 1.99 #average #2\n",
     "gt_gamma = 90 # in degrees\n",
     "\n",
     "fig, ax_total = plt.subplots()\n",
@@ -340,9 +342,9 @@
     "\n",
     "print(df_freq)\n",
     "for i, f in enumerate(df_freq):\n",
-    "    if np.any([r[0] <= f <= r[1] for r in BAD_FREQ_RANGES]):\n",
-    "        print('skipping', f)\n",
-    "        continue\n",
+    "    #if np.any([r[0] <= f <= r[1] for r in BAD_FREQ_RANGES]):\n",
+    "        #print('skipping', f)\n",
+    "        #continue\n",
     "    estimator = AngleEstimator()\n",
     "\n",
     "    d_slices = fill_nans(df_matrix[:, i, :], df_dist)\n",
@@ -362,7 +364,7 @@
     "                                                  #factors[mic_idx])\n",
     "        elif algo == \"cost\":\n",
     "            prob = get_approach_angle_cost(\n",
-    "                d_slice,\n",
+    "                d_slice**2,\n",
     "                f,\n",
     "                df_dist,\n",
     "                start_distances_grid,\n",
@@ -402,7 +404,7 @@
     "    gamma = get_estimate(angles, prob)\n",
     "    err_dict[\"all mics\"][i] = gamma - gt_gamma\n",
     "\n",
-    "angles, prob = estimator_all.get_angle_distribution(mics_left_right=[[1, 2], [0, 3]])\n",
+    "#angles, prob = estimator_all.get_angle_distribution(mics_left_right=[[1, 2], [0, 3]])\n",
     "angles, prob = estimator_all.get_angle_distribution(mics_left_right=None)\n",
     "ax_total.plot(angles, prob, label=algo)\n",
     "\n",
@@ -478,10 +480,10 @@
     "\n",
     "results = pd.DataFrame(columns=[\"normalization\", \"matrix\", \"values\"])\n",
     "method_dict = {\n",
-    "    'raw': \"\",\n",
+    "    #'raw': \"\",\n",
     "    'theoretical': \"\",\n",
-    "    'calibration-individual': calib_function_median,\n",
-    "    'calibration-global': calib_function_median_one,\n",
+    "    'our method': calib_function_median,\n",
+    "    #'calibration-global': calib_function_median_one,\n",
     "    #'calibration-fit': calib_function_fit,\n",
     "    #'calibration-fit-one': calib_function_fit_one,\n",
     "    # deprecated:\n",
@@ -615,7 +617,7 @@
     "chosen_mics = range(4) #[0, 1, 3] #range(4)\n",
     "n_mics = len(chosen_mics)\n",
     "\n",
-    "use_uniform_prior = True\n",
+    "use_uniform_prior = False #True\n",
     "\n",
     "context = Context.get_platform_setup()\n",
     "distances_grid_m = context.get_possible_distances() #np.arange(50) \n",
@@ -643,7 +645,7 @@
     "                    df_freq,\n",
     "                    distance,\n",
     "                    mics=chosen_mics)\n",
-    "            inf_machine.add_data(slice_exp, df_freq, mics=chosen_mics)\n",
+    "            inf_machine.add_data(np.sqrt(slice_exp), df_freq, mics=chosen_mics)\n",
     "            inf_machine.filter_out_freqs()\n",
     "            inf_machine.add_calibration_function(normalize_method)\n",
     "                \n",
@@ -729,7 +731,7 @@
     "        axs[1].set_xlim(-1, max(distances_grid_m * 1e2))\n",
     "        \n",
     "        fname_here = f\"{plot_dir}/{fname}_{key}_mic{mic}_frequency_performance.png\"\n",
-    "        save_fig(fig, fname_here)"
+    "        save_fig(fig, fname_here, extension=\"png\")"
    ]
   },
   {
