--- a/python/WallAnalysis.ipynb
+++ b/python/WallAnalysis.ipynb
@@ -29,6 +29,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 0. Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -72,13 +79,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Experimental distance-frequency matrix"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -111,106 +111,14 @@
     "backup_exists = data_collector.fill_from_backup(exp_name, mic_type, motors, snr)\n",
     "if not backup_exists: \n",
     "    print('generate data using script generate_df_results.')\n",
-    "print(data_collector.df.frequency.unique())"
+    "df_matrix, df_dist, df_freq = data_collector.get_df_matrix()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. DF analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from data_collector import prune_df_matrix\n",
-    "from plotting_tools import add_colorbar\n",
-    "import scipy\n",
-    "\n",
-    "kind = 'linear'\n",
-    "df_matrix, df_dist, df_freq = data_collector.get_df_matrix()\n",
-    "print(df_freq)\n",
-    "print(df_dist)\n",
-    "\n",
-    "# interpolation study\n",
-    "for mic, df in data_collector.df.groupby('mic'):\n",
-    "    \n",
-    "    df = df.sort_values(['distance', 'frequency'], inplace=False)\n",
-    "    xnew = np.sort(df.distance.unique())\n",
-    "    ynew = np.sort(df.frequency.unique())\n",
-    "    \n",
-    "    df = df.assign(magnitude_norm=df.magnitude/df.groupby('frequency').magnitude.transform('median'))\n",
-    "    z_series = df.groupby(['frequency', 'distance']).magnitude_norm.median()\n",
-    "    z = z_series.values\n",
-    "    x = z_series.index.get_level_values('distance').values\n",
-    "    y = z_series.index.get_level_values('frequency').values\n",
-    "    interpolator2d = scipy.interpolate.interp2d(x, y, z, kind=kind)\n",
-    "\n",
-    "    znew = interpolator2d(xnew, ynew)\n",
-    "    znew[np.abs(znew) > 2] = 0\n",
-    "\n",
-    "    znew_mat = znew.reshape((len(ynew), len(xnew)))\n",
-    "    fig, axs = plt.subplots(1, 3, sharey=True)\n",
-    "    fig.set_size_inches(15, 5)\n",
-    "    ims = [''] * 3\n",
-    "    \n",
-    "    ims[0] = axs[0].pcolorfast(df_dist, df_freq, df_matrix[mic, :-1, :-1])\n",
-    "    axs[0].set_title('raw')\n",
-    "    \n",
-    "    ims[1] = axs[1].pcolorfast(xnew, ynew, znew_mat[:-1, :-1])\n",
-    "    axs[1].set_title(f'2d {kind} interpolation')\n",
-    "\n",
-    "    znew_mat = np.zeros((len(ynew), len(xnew)))\n",
-    "    for i, (distance, df_dist_here) in enumerate(df.groupby('distance')):\n",
-    "        x = df_dist_here.frequency.unique()\n",
-    "        y = df_dist_here.groupby('frequency').magnitude.median()\n",
-    "        interpolator1d = scipy.interpolate.interp1d(x, y, kind=kind, bounds_error=False, fill_value=np.nan)\n",
-    "        znew = interpolator1d(ynew)\n",
-    "        znew_mat[:, i] = znew\n",
-    "        \n",
-    "    ims[2] = axs[2].pcolorfast(xnew, ynew, znew_mat[:-1, :-1])\n",
-    "    axs[2].set_title(f'1d {kind} interpolation')\n",
-    "    \n",
-    "    [add_colorbar(fig, ax, im) for ax, im in zip(axs, ims)]\n",
-    "    break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "from plotting_tools import add_colorbar, pcolorfast_custom\n",
-    "\n",
-    "df_matrix, df_dist, df_freq = data_collector.get_df_matrix()\n",
-    "fig, ax_all = plt.subplots()\n",
-    "for mic_idx in range(4):\n",
-    "    #fig, ax = plt.subplots()\n",
-    "    #im = pcolorfast_custom(ax, df_dist, df_freq_raw, df_matrix_raw[mic_idx])\n",
-    "    #im = ax.pcolormesh(df_dist, df_freq_raw, df_matrix_raw[mic_idx])\n",
-    "    #ax.set_title(f\"mic{mic_idx} original\")\n",
-    "    #add_colorbar(fig, ax, im)\n",
-    "    fig, ax = plt.subplots()\n",
-    "    fig.set_size_inches(10, 5)\n",
-    "    im = pcolorfast_custom(ax, df_dist, df_freq, df_matrix[mic_idx])\n",
-    "    ax.set_title(f\"mic{mic_idx} pruned\")\n",
-    "    ax_all.plot(df_freq, np.nanmean(df_matrix[mic_idx], axis=1), label=f'mic{mic_idx}')\n",
-    "    add_colorbar(fig, ax, im)\n",
-    "    break"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2. Distance slices"
+    "# 1. Distance slices"
    ]
   },
   {
@@ -260,11 +168,6 @@
     "        slice_exp = fill_nans(slice_exp, df_dist)\n",
     "    slice_the = get_dist_slice_theory(f, df_dist, azimuth_deg=azimuth_deg).T\n",
     "    \n",
-    "    #fig_f = plot_ffts(\n",
-    "    #    slice_exp=slice_exp,\n",
-    "    #    slice_the=slice_the,\n",
-    "    #    dist=df_dist,\n",
-    "    #)\n",
     "    fig_d = plot_slices(\n",
     "        slice_exp=slice_exp,\n",
     "        slice_the=slice_the,\n",
@@ -285,8 +188,6 @@
     "\n",
     "d1 = df_dist[-1] # starting distance of distance slice. \n",
     "rel_movement_cm = df_dist[1]-df_dist[0]\n",
-    "print(df_dist)\n",
-    "print(rel_movement_cm)\n",
     "factors = {mic:factor_distance_to_delta(d1, \n",
     "                                        rel_movement_cm, \n",
     "                                        mic, azimuth_deg=azimuth_deg) \n",
@@ -421,14 +322,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Frequency slices"
+    "# 2. Matrix analysis "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.1 Calibration"
+    "## 2.1 Calibration"
    ]
   },
   {
@@ -475,7 +376,6 @@
     "from simulation import get_df_theory\n",
     "from data_collector import normalize_df_matrix\n",
     "\n",
-    "\n",
     "results = pd.DataFrame(columns=[\"normalization\", \"matrix\", \"values\"])\n",
     "method_dict = {\n",
     "    'raw': \"\",\n",
@@ -492,14 +392,12 @@
     "    #'calibration-offline-old': calib_function_old,\n",
     "}\n",
     "\n",
-    "print(df_freq)\n",
-    "df_theory_pruned = get_df_theory(df_freq, df_dist)\n",
-    "\n",
     "for j, (key, method) in enumerate(method_dict.items()):\n",
     "    values = None\n",
     "    if key == \"raw\":\n",
     "        df_norm = deepcopy(df_matrix)\n",
     "    elif key == \"theoretical\":\n",
+    "        df_theory_pruned = get_df_theory(df_freq, df_dist)\n",
     "        df_norm = deepcopy(df_theory_pruned)\n",
     "    else:\n",
     "        df_norm, values = normalize_df_matrix(\n",
@@ -522,7 +420,7 @@
    },
    "outputs": [],
    "source": [
-    "from plotting_tools import plot_df_matrix, save_fig, titles\n",
+    "from plotting_tools import plot_df_matrix, save_fig, titles, add_colorbar\n",
     "\n",
     "min_freq = min(df_freq) #3100 #min(df_freq)\n",
     "max_freq = max(df_freq) #5000 #max(df_freq)\n",
@@ -564,6 +462,7 @@
     "axs[0].set_ylabel('frequency [Hz]')\n",
     "for i, (normalization, df) in enumerate(results.groupby(\"normalization\", sort=False)):\n",
     "    matrix = df.iloc[0].matrix\n",
+    "    print(np.min(matrix), np.max(matrix))\n",
     "    n_mics = matrix.shape[0]\n",
     "    df_exp = df.iloc[0].matrix[mic_idx]\n",
     "    ax, im = plot_df_matrix(\n",
@@ -586,7 +485,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.2 Performance"
+    "# 3. Frequency slices"
    ]
   },
   {
@@ -615,7 +514,7 @@
     "chosen_mics = range(4) #[0, 1, 3] #range(4)\n",
     "n_mics = len(chosen_mics)\n",
     "\n",
-    "use_uniform_prior = True\n",
+    "use_uniform_prior = True # False\n",
     "\n",
     "context = Context.get_platform_setup()\n",
     "distances_grid_m = context.get_possible_distances() #np.arange(50) \n",
@@ -766,10 +665,12 @@
     "eps = 1e-5\n",
     "\n",
     "plot_combis = [\n",
+    "    #{\"distance\": 15, \"algorithm\": \"cost\"},\n",
     "    {\"distance\": 15, \"algorithm\": \"bayes\"},\n",
-    "    {\"distance\": 17, \"algorithm\": \"bayes\"},\n",
-    "    {\"distance\": 28, \"algorithm\": \"bayes\"},\n",
+    "    #{\"distance\": 17, \"algorithm\": \"bayes\"},\n",
+    "    #{\"distance\": 28, \"algorithm\": \"bayes\"},\n",
     "]\n",
+    "print(\"using uniform prior:\", use_uniform_prior)\n",
     "\n",
     "for plot_combi in plot_combis:\n",
     "    distance = plot_combi.get(\"distance\")\n",
@@ -805,7 +706,8 @@
     "        for i_mic, mic_idx in enumerate(chosen_mics):\n",
     "            distances_bayes, proba_bayes_norm, diff_bayes = inf_machine.do_inference(\n",
     "                algorithm=\"bayes\", \n",
-    "                mic_idx=i_mic\n",
+    "                mic_idx=i_mic,\n",
+    "                #normalize=False\n",
     "            )\n",
     "            \n",
     "            inf_machine.plot(i_mic=i_mic, ax=axs_slice[i_mic], label=method, standardize=True,\n",
@@ -850,7 +752,8 @@
     "    ):\n",
     "        azimuth_deg_here = None if use_uniform_prior else azimuth_deg_here\n",
     "        distances_m, proba = distance_estimator.get_distance_distribution(\n",
-    "            azimuth_deg=azimuth_deg_here, distances_m=distances_grid_m, verbose=False\n",
+    "            azimuth_deg=azimuth_deg_here, distances_m=distances_grid_m, verbose=False,\n",
+    "            method=\"sum\"\n",
     "        )\n",
     "        ax_combi.plot(\n",
     "            distances_m*1e2,\n",
@@ -911,24 +814,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_name = \"2021_04_30_stepper\"\n",
-    "mic_type = \"audio_deck\"\n",
-    "motors = \"all45000\"\n",
-    "snr = 3\n",
-    "plot_tuples = [(0, 2998), (0, 3125), (0, 4485)]\n",
-    "\n",
-    "data_collector = DataCollector()\n",
-    "backup_exists = data_collector.fill_from_backup(exp_name, mic_type, motors, snr=snr)\n",
-    "if not backup_exists: \n",
-    "    print('generate data using script generate_df_results.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "exp_name = \"2021_07_08_stepper_fast\"\n",
     "mic_type = \"audio_deck\"\n",
     "motors = \"all45000\"\n",
@@ -957,9 +842,6 @@
     "max_distance = 35\n",
     "\n",
     "for i, (frequency, df_freq_here) in enumerate(data_collector.df.groupby('frequency')):\n",
-    "    \n",
-    "    # does not make a difference\n",
-    "    # df_here = df_here[df_here.magnitude > 2]\n",
     "    distances = df_freq_here.distance.unique()\n",
     "    if len(distances) < len(all_distances): # only plot distances with \"full coverage\"\n",
     "        continue\n",
@@ -978,8 +860,8 @@
     "    valid_distances = std_series.index[amps >= std_average]\n",
     "    limit_distance = valid_distances[-1] if len(valid_distances) else 0\n",
     "\n",
-    "    print(f'raw: mic {mic}, frequency {frequency}')\n",
-    "    print(f'median: alpha={alpha:.2f}, gain={gain:.2f}, offset={offset:.0f}, cost={cost_median}')\n",
+    "    #print(f'raw: mic {mic}, frequency {frequency}')\n",
+    "    #print(f'median: alpha={alpha:.2f}, gain={gain:.2f}, offset={offset:.0f}, cost={cost_median}')\n",
     "\n",
     "\n",
     "    label = f\"{frequency:.0f}Hz\"\n",
@@ -1016,67 +898,6 @@
     "        \n",
     "    fname_here = f'{plot_dir}/{fname}_fitting_{frequency:.0f}_{mic_idx}.png'\n",
     "    save_fig(fig, fname_here)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plt.figure()\n",
-    "fig.set_size_inches(5, 5)\n",
-    "df = fitting_results.loc[fitting_results.method=='raw']\n",
-    "for mic, df_mic in df.groupby('mic'):\n",
-    "    plt.plot(df_mic.frequency, df_mic.limit_distance, color=f'C{mic}', label=f'mic{mic}')\n",
-    "    \n",
-    "    success = df_mic.loc[df_mic.limit_distance == df_mic.limit_distance.max()].frequency.values\n",
-    "    fail = df_mic.loc[df_mic.limit_distance < df_mic.limit_distance.max()].frequency.values\n",
-    "    print(f'success mic{mic}:', success)\n",
-    "    print(f'fail mic{mic}:', fail)\n",
-    "plt.xlabel('frequency [Hz]')\n",
-    "plt.ylabel('limit distance [cm]')\n",
-    "plt.legend()\n",
-    "fname_here = f'{plot_dir}/{fname}_limit_distance.png'\n",
-    "save_fig(fig, fname_here)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import seaborn as sns\n",
-    "color_palette = \"tab10\"\n",
-    "extra_kwargs = {\n",
-    "    \"linewidth\": 0,\n",
-    "    \"palette\": color_palette,\n",
-    "    \"style\": \"method\",\n",
-    "    \"hue\": \"mic\",\n",
-    "    \"data\": fitting_results,\n",
-    "    \"x\": \"frequency\",\n",
-    "}\n",
-    "palette = sns.palettes.color_palette(color_palette)\n",
-    "fitting_results = fitting_results.apply(pd.to_numeric, errors=\"ignore\", axis=0)\n",
-    "plt.figure()\n",
-    "sns.scatterplot(\n",
-    "    y=\"gains\", **extra_kwargs,\n",
-    ")\n",
-    "\n",
-    "plt.figure()\n",
-    "sns.scatterplot(y=\"absorption\", **extra_kwargs)\n",
-    "\n",
-    "plt.figure()\n",
-    "sns.scatterplot(y=\"offset\", **extra_kwargs)\n",
-    "plt.ylabel(\"offset [cm]\")\n",
-    "\n",
-    "ls = {\"one-shot raw\": \"-\", \"median\": \":\", \"one-shot median\": \"--\", \"raw\": \"-.\"}\n",
-    "for method, df in fitting_results.groupby(\"method\"):\n",
-    "    medians = df.groupby([\"mic\"]).offset.median()\n",
-    "    [plt.axhline(m, color=palette[i], ls=ls[method]) for i, m in enumerate(medians)]\n",
-    "    plt.plot([], [], color=\"black\", ls=ls[method], label=method)\n",
-    "plt.legend(loc=\"upper left\", bbox_to_anchor=[1, 1])"
    ]
   },
   {
