Remove unnecessary changes

--- a/python/WallAnalysis.ipynb
+++ b/python/WallAnalysis.ipynb
@@ -706,7 +706,8 @@
     "        for i_mic, mic_idx in enumerate(chosen_mics):\n",
     "            distances_bayes, proba_bayes_norm, diff_bayes = inf_machine.do_inference(\n",
     "                algorithm=\"bayes\", \n",
-    "                mic_idx=i_mic\n",
+    "                mic_idx=i_mic,\n",
+    "                #normalize=False\n",
     "            )\n",
     "            \n",
     "            inf_machine.plot(i_mic=i_mic, ax=axs_slice[i_mic], label=method, standardize=True,\n",
